# lambda-aspnetcore-hosting-extensions

./: .gitignore  CLAUDE.md  Directory.Build.props  Directory.Packages.props  LayeredCraft.Lambda.AspNetCore.HostingExtensions.sln  LayeredCraft.Lambda.AspNetCore.HostingExtensions.slnx  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build.yaml  dependabot-auto-merge.yml  docs.yml  pr-build.yaml  pr-title-check.yaml  publish-preview.yaml  publish-release.yaml  release-drafter.yaml
docs/: index.md
docs/assets/css/: extra.css  style.scss
docs/examples/: index.md
docs/middleware/: lambda-timeout-middleware.md
src/LayeredCraft.Lambda.AspNetCore.HostingExtensions/: LayeredCraft.Lambda.AspNetCore.HostingExtensions.csproj
src/LayeredCraft.Lambda.AspNetCore.HostingExtensions/Extensions/: ApplicationBuilderExtensions.cs
src/LayeredCraft.Lambda.AspNetCore.HostingExtensions/Middleware/: LambdaTimeoutLinkMiddleware.cs
test/LayeredCraft.Lambda.AspNetCore.HostingExtensions.Tests/: LayeredCraft.Lambda.AspNetCore.HostingExtensions.Tests.csproj  UnitTest1.cs
test/LayeredCraft.Lambda.AspNetCore.HostingExtensions.Tests/Extensions/: ApplicationBuilderExtensionsTests.cs
test/LayeredCraft.Lambda.AspNetCore.HostingExtensions.Tests/Middleware/: LambdaTimeoutLinkMiddlewareTests.cs
test/LayeredCraft.Lambda.AspNetCore.HostingExtensions.Tests/TestKit/: BaseFixtureFactory.cs
test/LayeredCraft.Lambda.AspNetCore.HostingExtensions.Tests/TestKit/Attributes/: BaseAutoDataAttribute.cs  (+1 more)
(+4 files in other folders)
